examples/negative/annotations/two.glask
module Main where
{ class Num a
; instance Num Int

; class Fractional a
; instance Fractional Double


-- THIS SHOULD ALSO FAIL
; data Ex = Ex (forall . Maybe)

}